# Progetto-Intermedio

InertialDriver/: CMakeLists.txt  README.txt  Report  Report.docx
InertialDriver/include/: InertialDriver.cpp  InertialDriver.h  Lettura.h  Misura.cpp  Misura.h  MyVector.h  MyVector.hpp  main.cpp
InertialDriver/src/: Misura.cpp  main.cpp  readme.txt
